2016-10-06  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/epiphany-hal.c (native_target_ops): Fix typo
	{native_taget_ops} in definition of forward declaration.

2016-08-03  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_to_rank): Use
	p_coords_to_rank().
	(pal_open): Open team with 2D topology.
	(pal_close): Use p_team_size() instead of calculating team
	size manually.

2016-07-23  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_close): Replace p_wait() call
	with call to p_kill().

2016-07-23  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_load_group): Fix range bug.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_load_group): Call p_run() with
	P_RUN_PREPARE flag.
	(pal_start_group): Call P_RUN with P_RUN_PREPARED flag.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_populate_platform): Query device
	parameters from PAL.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/pal-target.c (pal_to_rank): Implement.
	(pal_to_rank): Likewise.
	(pal_alloc): Likewise.
	(pal_free): Likewise.
	(pal_read_buf): Likewise.
	(pal_write_buf): Likewise.
	(pal_read_word): Likewise.
	(pal_write_word): Likewise.
	(pal_read_reg): Likewise.
	(pal_write_reg): Likewise.
	(pal_mread_word): Likewise.
	(pal_mwrite_word): Likewise.
	(pal_mread_buf): Likewise.
	(pal_mwrite_buf): Likewise.
	(pal_reset_system): Likewise.
	(pal_populate_platform): Likewise.
	(pal_init): Likewise.
	(pal_finalize): Likewise.
	(pal_open): Likewise.
	(pal_close): Likewise.
	(pal_load_group): Likewise.
	(pal_start_group): Likewise.
	(pal_get_raw_pointer): Likewise.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/esim-target.c (ee_get_raw_pointer_esim):
	Implement.
	(esim_target_ops): Use ee_get_raw_pointer as get_raw_pointer
	callback.

2016-07-22  Ola Jeppsson  <ola@adapteva.com>

	* e-hal/src/e-loader.c (e_load): Simplify.